# MyJenkinsPipeline

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
audience-common/: CMakeLists.txt
audience-common/include/audience/common/: audience_common.h
audience-common/src/: CMakeLists.txt  audience_common.cpp
audience-device/: CMakeLists.txt
audience-device/include/audience/device/: audience_device.h
audience-device/src/: CMakeLists.txt  audience_device.cpp
audience-encode/: CMakeLists.txt
audience-encode/include/audience/encode/: audience_session.h
audience-encode/src/: CMakeLists.txt  audience_session.cpp
audience-encode/test/: CMakeLists.txt  audience_encode_tests.cpp
ci/: build.sh
cmake/: EnableClangTidy.cmake  EnableDoxygen.cmake  clang-format.cmake
